--- a/AngularFastfood/package.json
+++ b/AngularFastfood/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angularx-social-login": "^4.0.1",
     "bootstrap": "^5.1.3",
     "ngx-cookie-service": "^12.0.3",
     "rxjs": "~6.6.0",
