Google login Controller og JWT

--- a/Identity/Identity/Identity/appsettings.json
+++ b/Identity/Identity/Identity/appsettings.json
@@ -11,5 +11,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JWTSettings": {
+    "securityKey": "b2ncJxlIbC4YiYIw1e3a",
+    "validIssuer": "IdentityAPI",
+    "validAudience": "https://localhost:4200",
+    "expiryInMinutes": 120
+  },
+  "GoogleAuthSettings": {
+    "clientId": "883654869277-m2mlgsroh8vsmt0tg82lmo4cnt0cuqs3.apps.googleusercontent.com"
+  },
   "AllowedHosts": "*"
 }
