Google login skal prøve at forstå det hele men skal skal måske starte fra bunden af med den tutorial for at forstå det hele

--- a/Identity/Identity/Identity/appsettings.json
+++ b/Identity/Identity/Identity/appsettings.json
@@ -18,7 +18,8 @@
     "expiryInMinutes": 120
   },
   "GoogleAuthSettings": {
-    "clientId": "883654869277-m2mlgsroh8vsmt0tg82lmo4cnt0cuqs3.apps.googleusercontent.com"
+    "ClientId": "883654869277-m2mlgsroh8vsmt0tg82lmo4cnt0cuqs3.apps.googleusercontent.com",
+    "ClientSecret": "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"
   },
   "AllowedHosts": "*"
 }
