Auth doesnt work anymore with google login

--- a/Identity/Identity/Identity/appsettings.json
+++ b/Identity/Identity/Identity/appsettings.json
@@ -13,12 +13,12 @@
   },
   "JWTSettings": {
     "securityKey": "b2ncJxlIbC4YiYIw1e3a",
-    "validIssuer": "IdentityAPI",
+    "validIssuer": "Identity",
     "validAudience": "https://localhost:4200",
     "expiryInMinutes": 120
   },
   "GoogleAuthSettings": {
-    "ClientId": "883654869277-m2mlgsroh8vsmt0tg82lmo4cnt0cuqs3.apps.googleusercontent.com",
+    "ClientId": "929177559568-aiaum2hs46ede902tsurc8i0valrso6s.apps.googleusercontent.com",
     "ClientSecret": "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"
   },
   "AllowedHosts": "*"
