Identity og google
Skal måske wrappe alt i JWT istedetfor men kan ikke finde ud af om det er sikkert nok til at gøre

--- a/Identity/Identity/Identity/appsettings.json
+++ b/Identity/Identity/Identity/appsettings.json
@@ -14,7 +14,7 @@
   "JWTSettings": {
     "securityKey": "b2ncJxlIbC4YiYIw1e3a",
     "validIssuer": "Identity",
-    "validAudience": "https://localhost:4200",
+    "validAudience": "http://localhost:4200",
     "expiryInMinutes": 120
   },
   "GoogleAuthSettings": {
