--- a/AngularFastfood/package.json
+++ b/AngularFastfood/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.2.0",
     "angularx-social-login": "^4.0.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "ngx-cookie-service": "^12.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
