--- a/Identity/Identity/Identity/appsettings.json
+++ b/Identity/Identity/Identity/appsettings.json
@@ -19,7 +19,7 @@
   },
   "GoogleAuthSettings": {
     "ClientId": "929177559568-aiaum2hs46ede902tsurc8i0valrso6s.apps.googleusercontent.com",
-    "ClientSecret": "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"
+    "ClientSecret": ""
   },
   "AllowedHosts": "*"
 }
